--- a/style/style.css
+++ b/style/style.css
@@ -1,181 +1,164 @@
 * {
+	font-size: 16px;
+	font-family: 'Roboto', 'Arial', sans-serif;
 	box-sizing: border-box;
+	font-weight: 400;
 	line-height: 1;
-	transition: all .1s ease-in;
+	box-sizing: border-box;
 }
 
 
-
-.header {
-
-	background-color: #4A4F56;
-}
-
-.header .container {
-	min-height: 82px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+body {
+	background-color: #3B3F45;
 }
 
 .container {
-	max-width: 535px;
+	max-width: 534px;
 	margin: 0 auto;
 	padding: 0 15px;
+}
+
+.header {
+	min-height: 82px;
+	background-color: #4A4F56;
+	padding: 19px 0 12px;
+}
+
+.header .container {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
 }
 
 .header h1 {
 	color: #FF8984;
 	font-weight: 700;
 	font-size: 24px;
-	line-height: 28px;
 	text-align: center;
-	margin-bottom: 4px;
+	margin-bottom: 5px;
 }
 
-.header p {
+.header span {
 	color: #FF8984;
-	font-size: 16px;
-	font-weight: 400;
-	text-align: center;
-
 }
 
 
 /* !list */
 
-.food {
-	background-color: #3B3F45;
-	height: calc(100vh - 82px);
+main {
+	height: calc(100vh - 81px);
+	padding: 20px 0 45px;
 }
 
 .list {
-	padding-top: 20px;
 	margin-bottom: 45px;
 }
 
-.list li:nth-child(odd) {
+.list li {
 	background-color: #88839E;
 }
 
-.list li:nth-child(even) {
+.list li:nth-last-of-type(2n+1) {
 	background-color: #7A7593;
 }
 
-.list-item {
-	display: flex;
-	align-items: center;
-
-}
-
-.list-item label {
-	display: flex;
-	min-height: 45px;
-	justify-items: center;
-	width: 100%;
-}
-
-.list-item label::before {
-	text-decoration: line-through;
-}
-
-.list label:hover {
+.list li:hover {
 	background-color: #625E77;
-	/* min-height: 41px; */
-	border: solid #fff 2px;
-	border-left: none;
-	border-right: none;
 }
 
+.list li:hover label {
+	border-color: #fff;
+}
+
+.list label {
+	min-height: 45px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	cursor: pointer;
+	border-top: 3px solid transparent;
+	border-bottom: 3px solid transparent;
+	padding: 5px 12px;
+}
+
+.list label input {
+	margin: 0 16px 0 0;
+	appearance: none;
+}
+
+.list label input::before {
+	content: '';
+	width: 19px;
+	height: 19px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	font-family: 'Font Awesome 6 Free';
+	font-weight: 700;
+	background-color: #fff;
+}
+
+.list label input:checked::before {
+	content: '\f00c';
+}
+
+.list label input:checked+.description .text {
+	color: #9896AC;
+}
+
+.list label input:checked+.description::before {
+	content: '';
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	color: #9896AC;
+	width: 100%;
+	height: 1px;
+	background-color: #9896AC;
+}
+
+.description {
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
 
 .text {
 	display: flex;
 	align-items: center;
-	color: #fff;
 	font-size: 18px;
-	font-weight: 400px;
-	margin-left: 47px;
-	position: relative;
+	color: #fff;
 }
 
 .text span {
-	color: #fff;
 	font-size: 11px;
-	margin-left: 10px;
+	margin-left: 5px;
 }
-
-.text span::before {
-	content: "(";
-}
-
-.text span::after {
-	content: ")";
-}
-
-.list-item label:active {
-	background-color: indianred;
-}
-
-input[type=checkbox]:checked+.text {
-	color: #9B96AC;
-}
-
-input[type=checkbox]:checked+.text span {
-	color: #9B96AC;
-}
-
-
-input[type=checkbox] {
-	display: none;
-}
-
-.text::before {
-	content: '';
-	display: block;
-	position: absolute;
-	width: 19px;
-	height: 19px;
-	background-color: #fff;
-	margin-left: -35px;
-}
-
-input[type=checkbox]:checked+.text::before {
-	background-image: url('/img/check.png');
-	background-repeat: no-repeat;
-	background-position: center;
-
-}
-
-input[type=checkbox]:checked+.text::after {
-	content: '';
-	position: absolute;
-	background-color: #9B96AC;
-	height: 1px;
-	width: 100%;
-	top: 50%;
-	transform: translateY(-50%);
-	left: 0;
-}
-
-
-
 
 /* !wish */
 
 
-.bon {
+.message {
 	background-color: #4A4F56;
 	margin-bottom: 300px;
 	min-height: 45px;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-}
-
-.bon-title {
 	font-weight: 400;
 	font-size: 18px;
 	color: #FF8984;
 	text-align: center;
 	padding: 5px 10px;
+}
+
+@media only screen and (min-width: 568px) {
+	.container {
+		padding: 0;
+	}
 }
